# Smart_Price

./: .env.example  .gitignore  README.md  build_windows_exe.bat  extract_pdf.py  extraction_guide.md  price_parser.py  pyproject.toml  run_app.py  run_sales_app.py  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
LLM_Output_db/: llm_response_page_01.txt  llm_response_page_02.txt  llm_response_page_03.txt  llm_response_page_04.txt  llm_response_page_05.txt  llm_response_page_07.txt  llm_response_page_08.txt  llm_response_page_09.txt  llm_response_page_10.txt  llm_response_page_11.txt  llm_response_page_12.txt  llm_response_page_13.txt  llm_response_page_14.txt  llm_response_page_16.txt  llm_response_page_17.txt  llm_response_page_20.txt  llm_response_page_21.txt  llm_response_page_22.txt  llm_response_page_23.txt  llm_response_page_24.txt  llm_response_page_25.txt  llm_response_page_26.txt  llm_response_page_27.txt  llm_response_page_28.txt  llm_response_page_29.txt  llm_response_page_30.txt  llm_response_page_31.txt
LLM_Output_db/ESMAKSAN_2025_MART_F%C4%B0YAT_L%C4%B0STES%C4%B0/: llm_response_page_01.txt  llm_response_page_02.txt  llm_response_page_03.txt  llm_response_page_04.txt  llm_response_page_05.txt  llm_response_page_06.txt  llm_response_page_07.txt  llm_response_page_08.txt  llm_response_page_09.txt  llm_response_page_10.txt  llm_response_page_11.txt  llm_response_page_12.txt  llm_response_page_13.txt  (+18 more)
Master_data_base/: master.db  master_dataset.xlsx
core/: common_utils.py  extract_excel.py  extract_pdf.py  logger.py  ocr_llm_fallback.py
data/: README.md
logo/: sadece_dp_beyaz.tif
sales_app/: README.md  streamlit_app.py
smart_price/: config.py  ocr_llm_fallback.py  parsers.py  price_parser.py  streamlit_app.py
tests/: __init__.py  test_agentic_parse.py  test_agentic_pdf.py  test_big_alert.py  test_common_utils.py  test_config.py  test_extract_pdf.py  test_github_upload.py  test_headers.py  test_llm_extract.py  test_ocr_llm_fallback.py  test_page_summary.py  test_parser_df.py  test_price_parser.py  test_progress_batch.py  test_prompt_builder.py  test_prompt_guide.py  test_prompt_utils.py  test_sales_app.py  test_save_master_dataset.py  test_standardize_columns.py  test_validate_df.py
(+220 files in other folders)
