[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-price"
version = "0.1.0"
description = "Tools for parsing and searching price lists"
authors = [{name = "Murat Turan"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pdfplumber",
    "streamlit",
    "openpyxl",
    "xlrd",
    "pdf2image",
    "pytesseract",
    "openai>=1.0",
    "python-dotenv",
]

[tool.setuptools]
packages = ["core"]
py-modules = ["price_parser", "streamlit_app"]

[project.scripts]
smart-price-parser = "price_parser:main"
smart-price-app = "streamlit_app:cli"
