[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-price"
version = "0.1.0"
description = "Tools for parsing and searching price lists"
authors = [{name = "Murat Turan"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "streamlit",
    "openpyxl",
    "xlrd",
    "pdf2image",
    "openai>=1.0",
    "tiktoken",
    "python-dotenv",
    "jsonschema>=4.22.0",
]

[tool.setuptools.packages.find]
where = ["Price App", "Sales App", "src"]

[project.optional-dependencies]
agentic = [
    "agentic-doc>=0.2.3",
    "lxml>=4.9",                # read_html için
    "beautifulsoup4",
    "html5lib",
]


[project.scripts]
smart-price-parser = "smart_price.price_parser:main"
smart-price-app = "smart_price.streamlit_app:cli"
smart-price-sales = "sales_app.streamlit_app:cli"
